# nx-logstats

./: .gitignore  Design.md  pyproject.toml
.github/workflows/: publish.yml
sample_logs/: errors_small_dataset.txt  simple_logs.txt  valid_long_logs.txt  valid_simple_logs.txt
src/nx_logstats/: analysis.py  cli.py  parser.py  reporter.py
tests/: __init__.py
